--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
 />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="node_modules/react-quill/dist/quill.snow.css">
+<link rel="stylesheet" href="node_modules/react-quill/dist/quill.bubble.css">
+<link rel="stylesheet" href="node_modules/react-quill/dist/quill.core.css">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
